CRUD FINISHED with validations and HTTP responses
